fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -18,6 +19,12 @@ div,p {
     background: transparent; 
     margin: 0; 
     padding: 0; 
+}
+
+p {
+    animation: fade-in linear both; 
+    animation-timeline: view();
+    animation-range: entry-crossing 0% contain 30%; 
 }
 
 img {
@@ -41,8 +48,8 @@ a:hover {
 }
 
 #about-section {
-    /* font-size: 0;  */
-    padding-top: -4px;
+    padding-top: 5%;
+    /* margin-top: -0.75px;  */
 }
 
 #particles-js canvas {
@@ -176,16 +183,15 @@ ul li:hover ul.dropdown {
 
 .about {
     margin-top: 35%; 
-    /* line-height: 0; */
     display: flex; 
     flex-direction: column;
     width: 100%; 
-    padding: 0; 
+    padding-top: -4px; 
+
 
 }
 
 .curved-div {
-    /* width: 100%;  */
     height: 100%; 
     background: rgba(235, 77, 75, 0.8);
     color: #fff;
@@ -197,9 +203,10 @@ ul li:hover ul.dropdown {
     display: block; 
   }
   .curved-div h1 {
-    padding-top: -4px;
-    display: block; 
-    font-size: 6rem;
+    padding: 0; 
+    margin: 0; 
+    /* float: right;  */
+    font-size: 5rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   .curved-div p {
@@ -226,25 +233,31 @@ ul li:hover ul.dropdown {
 .left-div {
     width: 50%; 
     padding: 10px; 
-    /* background: blue;  */
+    padding-top: 20px; 
 }
 
 .right-div {
     width: 50%; 
     padding: 20px;
     text-align: left;
-    /* background: green;  */
+    display: flex;
+    flex-direction: column;
+    overflow:auto; 
+
 }
 
 .right-div a{
     color: blue; 
-    /* text-decoration: underline; */
+}
+
+.right-div a:hover{
+    color: green; 
 }
 
 #slider {
     position: relative;
-    /* float: left;  */
     /* left: 10%; */
+    padding-top: 6%; 
     width: 80%;
     margin: auto; 
     max-width: 100%;
@@ -266,6 +279,7 @@ input[type="radio"] {
     transform: translateX(-83px);
     cursor: pointer; 
     opacity: 0.4; 
+    accent-color: #eb4d4b;
 }
 
 input[type="radio"]:nth-child(5){
